# rsna-cervical-spine_poetry

./: .gitignore  .pre-commit-config.yaml  Readme.md  environment.yml  pyproject.toml  setup.py
.dvc/: config
Video_Gifs/: README.md
assignments/1_Project_Setup/: Cervical_Spine.ipynb  Cervical_Spine_EDA.ipynb  report.bib  report.tex
assignments/2_Exploratory_DA/: Train_Segmentations.ipynb
assignments/3_Final_Project/: README.md
data/: raw
docs/: projectSetup.md
models/: README.md
notebooks/: 1.preprocess.ipynb  2.stage1.ipynb  Cervical_Spine_EDA.ipynb  RSNA_Classification.ipynb  Train_Segmentations.ipynb  another.ipynb  conv3d_same.py  experiment.ipynb  playground.ipynb  rsna-classification.ipynb  simple.ipynb  training.ipynb
streamlit-apps/: nii-explorer.py
video_gifs/: no_mask_verteb.mov
