[tool.poetry]
name = "rsna-cervical-spine"
version = "0.1.0"
description = ""
authors = ["Hadavand's Minions"]

[tool.poetry.dependencies]
python = "^3.9.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
nibabel = "^4.0.2"
seaborn = "^0.12.1"
streamlit = "^1.14.1"
watchdog = "^2.1.9"
scikit-learn = "^1.1.3"
pydicom = "^2.3.1"
scikit-image = "^0.19.3"
opencv-python = "^4.6.0.66"
albumentations = "^1.3.0"
pylibjpeg = "^1.4.0"
pylibjpeg-libjpeg = "^1.3.2"
warmup-scheduler = "^0.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
